chat-site/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend-service
spec:
  type: NodePort
  selector:
    app: chat-frontend
  ports:
  - port: 90
    targetPort: 90
    nodePort: 30090
    protocol: TCP
